--- a/styles/CommentForm.module.css
+++ b/styles/CommentForm.module.css
@@ -7,7 +7,26 @@
     border-color: rgb(7, 0, 145);
     border-width: 1.6px;
     border-radius: 4px;
-    padding-left: 5px;
-    padding-top: 5px;
-    font-size: 14px;
+    padding-left: 13px;
+    padding-top: 13px;
+    font-size: 16px;
+}
+.textArea::-webkit-input-placeholder {
+    color: rgba(0, 0, 0, 0.3);
+}
+
+.textArea:-moz-placeholder { /* Firefox 18- */
+    color: rgba(0, 0, 0, 0.3);
+}
+
+.textArea::-moz-placeholder {  /* Firefox 19+ */
+    color: rgba(0, 0, 0, 0.3);
+}
+
+.textArea:-ms-input-placeholder {
+    color: rgba(0, 0, 0, 0.3);
+}
+
+.textArea::placeholder {
+    color: rgba(0, 0, 0, 0.3);
 }
